[BeOS Only] Bug 70489: window objects leak. patch by Makoto Hamanaka <VYA04230@nifty.com> r=guru@startrek.com